jsonnet-youtube/service.yaml
# this is a kubernetes service of type NodePort
apiVersion: v1
kind: Service
metadata:
  name: jsonnet-youtube
spec:
  type: NodePort
  selector:
    app: jsonnet-youtube
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
