jsonnet-youtube/ingress.yaml
# this is a kubernetes ingress

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jsonnet-youtube
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: jsonnet-youtube.k8s.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jsonnet-youtube
            port:
              number: 8080
